# bmatmul

./: .gitignore  CMakeLists.txt  bmatmul.cu  matmul.cu  test.cu
